# pygettextify

./: .gitignore  README.md  dataset.json  evaluate_baseline.py  example.py  github_dataset.ipynb  pyproject.toml  train.py
.github/workflows/: tests.yml
example_project/myapp/: app.py  utils.py
gettextify/: cli.py  features.py  heuristic.py  parser.py  predictor.py  transformer.py
gettextify/model/: catboost_model.cbm
tests/: conftest.py  test_features.py  test_model.py  test_parser.py  test_predictor.py  test_transformer.py
